--- a/playbook.yml
+++ b/playbook.yml
@@ -8,4 +8,8 @@
         var: ansible_facts
     - name: Vérifier la connectivité
       ping:
-
+    - name: Déployer la clé publique
+      authorized_key:
+        user: openit
+        state: present
+        key: "{{ lookup('file', '~/.ssh/id_ed25519.pub') }}"
