--- a/playbook-web.yml
+++ b/playbook-web.yml
@@ -2,6 +2,11 @@
 - name: Playbook web
   hosts: web
   tasks:
+    - name: Désinstaller Apache
+      package:
+        name: apache2*
+        state: absent
+
     - name: Installer un serveur web
       package:
         name: nginx
@@ -13,13 +18,9 @@
         state: started
         enabled: yes
 
-    - name: Télécharger Wordpress
-      get_url:
-        url: https://wordpress.org/latest.tar.gz
-        dest: /var/www/html/wp.tar.gz
-
     - name: Désarchive Wordpress
       unarchive:
-        src: /var/www/html/wp.tar.gz
+        src: https://wordpress.org/latest.tar.gz
         dest: /var/www/html/
         remote_src: yes
+        creates: /var/www/html/wordpress
