--- a/playbook-web.yml
+++ b/playbook-web.yml
@@ -24,3 +24,24 @@
         dest: /var/www/html/
         remote_src: yes
         creates: /var/www/html/wordpress
+
+    - name: Envoi de la configuration nginx
+      copy: 
+        src: files/nginx-wp.conf
+        dest: /etc/nginx/sites-available/wordpress
+    
+    - name: Désactivation du site par defaut
+      file:
+        path: /etc/nginx/sites-enabled/default
+        state: absent
+    
+    - name: Activation le site Wordpress
+      file:
+        src: /etc/nginx/sites-available/wordpress
+        dest: /etc/nginx/sites-enabled/wordpress
+        state: link
+
+    - name: Redémarrer nginx
+      service:
+        name: nginx
+        state: restarted
