--- a/files/nginx-wp.conf
+++ b/files/nginx-wp.conf
@@ -50,13 +50,13 @@ server {
 
 	# pass PHP scripts to FastCGI server
 	#
-	#location ~ \.php$ {
-	#	include snippets/fastcgi-php.conf;
+	location ~ \.php$ {
+		include snippets/fastcgi-php.conf;
 	#
 	#	# With php-fpm (or other unix sockets):
 	#	fastcgi_pass unix:/run/php/php7.4-fpm.sock;
 	#	# With php-cgi (or other tcp sockets):
-	#	fastcgi_pass 127.0.0.1:9000;
-	#}
+		fastcgi_pass {{ hostvars[groups['php'][0]]['ansible_host'] }}:9000;
+	}
 
 }
