--- a/playbook-php.yml
+++ b/playbook-php.yml
@@ -26,3 +26,19 @@
       state: restarted
     when: php_conf.changed
     
+  - name: Installer le client NFS
+    package:
+      name: nfs-common
+      state: latest
+  
+  - name: Créer le point de montage
+    file:
+      path: /var/www/html/wordpress
+      state: directory
+  
+  - name: monter le partage nfs
+    mount:
+      fstype: nfs
+      path: /var/www/html/wordpress
+      src: "{{ hostvars[groups['web'][0]]['ansible_host'] }}:/var/www/html/wordpress"
+      state: mounted
