--- a/playbook-db.yml
+++ b/playbook-db.yml
@@ -24,3 +24,15 @@
       state: present
       priv: "{{ db_database }}.*:ALL"
       login_unix_socket: /run/mysqld/mysqld.sock
+
+  - name: Reconfigurer mariadb
+    template:
+      src: files/mariadb.cnf
+      dest: /etc/mysql/mariadb.conf.d/51-bindaddress.cnf
+    register: mariadb_conf
+
+  - name: Redémarrer mariadb
+    service:
+      name: mariadb
+      state: restarted
+    when: mariadb_conf.changed
