--- a/ansible.cfg
+++ b/ansible.cfg
@@ -2,6 +2,7 @@
 inventory=inventory
 remote_user = openit
 private_key_file = ~/.ssh/id_ed25519
+host_key_checking = False
 
 [privilege_escalation]
 become=True
