--- a/playbook-web.yml
+++ b/playbook-web.yml
@@ -66,3 +66,10 @@
     - name: Recharger les partages NFS
       command: exportfs -a
       when: nfs_exports.changed
+    
+    - name: Changement des permissions
+      file:
+        path: /var/www/html/wordpress
+        recurse: true
+        owner: www-data
+        group: www-data
