Variable wordpress_path

--- a/files/nginx-wp.conf
+++ b/files/nginx-wp.conf
@@ -38,7 +38,7 @@ server {
 	#
 	# include snippets/snakeoil.conf;
 
-	root /var/www/html/wordpress/;
+	root {{ wordpress_path }};
 
 	index index.php index.html index.htm index.nginx-debian.html;
 
