--- a/playbook-php.yml
+++ b/playbook-php.yml
@@ -35,14 +35,14 @@
   
   - name: Créer le point de montage
     file:
-      path: /var/www/html/wordpress
+      path: "{{ wordpress_path }}"
       state: directory
   
   - name: monter le partage nfs
     mount:
       fstype: nfs
-      path: /var/www/html/wordpress
-      src: "{{ hostvars[groups['web'][0]]['ansible_host'] }}:/var/www/html/wordpress"
+      path: "{{ wordpress_path }}"
+      src: "{{ hostvars[groups['web'][0]]['ansible_host'] }}:{{ wordpress_path }}"
       state: mounted
       opts: "_netdev,x-systemd.after=php{{ php_version }}-fpm.service"
   
