variable php_port

--- a/files/nginx-wp.conf
+++ b/files/nginx-wp.conf
@@ -56,7 +56,7 @@ server {
 	#	# With php-fpm (or other unix sockets):
 	#	fastcgi_pass unix:/run/php/php7.4-fpm.sock;
 	#	# With php-cgi (or other tcp sockets):
-		fastcgi_pass {{ hostvars[groups['php'][0]]['ansible_host'] }}:9000;
+		fastcgi_pass {{ hostvars[groups['php'][0]]['ansible_host'] }}:{{ php_port }};
 	}
 
 }
