--- a/files/fpm.conf
+++ b/files/fpm.conf
@@ -1,7 +1,7 @@
 [www]
 user = www-data
 group = www-data
-listen = {{ ansible_host }}:9000
+listen = {{ ansible_host }}:{{ php_port }}
 listen.owner = www-data
 listen.group = www-data
 pm = dynamic
