--- a/playbook-init.yml
+++ b/playbook-init.yml
@@ -25,7 +25,7 @@
     authorized_key:
       user: openit
       state: present
-      key: "{{ lookup('file', '~/.ssh/id_ed25519.pub') }}"
+      key: "{{ lookup('file', ansible_ssh_private_key_file+'.pub') }}"
   
   - name: Résolution DNS du hostname
     lineinfile:
