--- a/playbook-init.yml
+++ b/playbook-init.yml
@@ -1,4 +1,13 @@
 ---
+- name: Controlnode
+  hosts: localhost
+  tasks:
+  - name: generate SSH key
+    openssh_keypair:
+      path: "{{ ansible_ssh_private_key_file }}"
+      type: ed25519
+      state: present
+      force: no
 
 - name: Playbook initial
   hosts: all
