--- a/playbook-db.yml
+++ b/playbook-db.yml
@@ -2,6 +2,11 @@
 
 - name: Playbook DB
   hosts: db
+  handlers:
+  - name: Redémarrer mariadb
+    service:
+      name: mariadb
+      state: restarted
   tasks:
   - name: Installer le SGBD
     package:
@@ -29,10 +34,4 @@
     template:
       src: files/mariadb.cnf
       dest: /etc/mysql/mariadb.conf.d/51-bindaddress.cnf
-    register: mariadb_conf
-
-  - name: Redémarrer mariadb
-    service:
-      name: mariadb
-      state: restarted
-    when: mariadb_conf.changed
+    notify: Redémarrer mariadb
