fix wordpress path

--- a/files/nginx-wp.conf
+++ b/files/nginx-wp.conf
@@ -38,7 +38,7 @@ server {
 	#
 	# include snippets/snakeoil.conf;
 
-	root {{ wordpress_path }};
+	root {{ wordpress_path | realpath }};
 
 	index index.php index.html index.htm index.nginx-debian.html;
 
